# wgpu_rust

./: Cargo.toml
examples/ch01/: test01.rs  test02.rs
examples/ch02/: common.rs  first_triangle.rs  first_triangle.wgsl  triangle_vertex_color.rs  triangle_vertex_color.wgsl
examples/ch03/: point_line.rs  point_line.wgsl  triangles.rs  triangles.wgsl
examples/ch04/: square.rs  square_index.rs  triangle.wgsl  triangles.rs
examples/ch05/: rotation.rs  scaling.rs  translation.rs  view_projection.rs
examples/ch06/: camera.rs  camera_control.rs  cube_face_color.rs  cube_face_color.wgsl  cube_vertex_color.rs  line3d.rs  line3d.wgsl  rotate_cube.rs
examples/common/: transform.rs  transforms.rs  vertex_data.rs
src/: main.rs
