[package]
name = "wgpu_book"
version = "0.1.0"
author = ["Denilson"]
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.11"
cgmath = "0.18"
env_logger = "0.9"
futures = "0.3"
gfx-hal = "0.9"
image = "0.23"
log = "0.4"
pollster = "0.2"
winit = "0.25"
anyhow = "1.0"
bytemuck = { version = "1.4", features = ["derive"] }

[[example]]
name = "ch01_test01"
path = "examples/ch01/test01.rs"

[[example]]
name = "ch01_test02"
path = "examples/ch01/test02.rs"

[[example]]
name = "ch02_first_triangle"
path = "examples/ch02/first_triangle.rs"

[[example]]
name = "ch02_triangle_vertex_color"
path = "examples/ch02/triangle_vertex_color.rs"

[[example]]
name = "ch03_point_line"
path = "examples/ch03/point_line.rs"

[[example]]
name = "ch03_triangles"
path = "examples/ch03/triangles.rs"

[[example]]
name = "ch04_triangles"
path = "examples/ch04/triangles.rs"

[[example]]
name = "ch04_square"
path = "examples/ch04/square.rs"

[[example]]
name = "ch04_square_index"
path = "examples/ch04/square_index.rs"

[[example]]
name = "ch05_scaling"
path = "examples/ch05/scaling.rs"

[[example]]
name = "ch05_translation"
path = "examples/ch05/translation.rs"

[[example]]
name = "ch05_rotation"
path = "examples/ch05/rotation.rs"

[[example]]
name = "ch05_view_projection"
path = "examples/ch05/view_projection.rs"
